2004-06-23  Philip Blundell  <philb@gnu.org>

	* Version 0.17 released.
	
2004-06-23  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add es.

2004-06-17  Florian Boor <florian.boor@kernelconcepts.de>
	
	* Released Version 0.15
	* main.c: Removed toolbar style setting.

2004-05-16  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Clocks out running event automatically if window is destroyed.
	* main.c: Allow only one task clocked in.
	* html.c: Several chages to improve displaying events.
	* TODO: New file to collect ideas.

2004-05-05  Florian Boor <florian.boor@kernelconcepts.de>

	* Fixed bug that caused new tasks to start without event.
	* Basic data lines, some time info.
	* Finished journal framework, now only content is missing.

2004-05-03  Florian Boor <florian.boor@kernelconcepts.de>

	* Added files: html.c, html.h implementing html output stuff.
	* main.c, html.c, html.h: Next part of journal implementation.

2004-05-03  Philip Blundell  <philb@gnu.org>

	* Version 0.14 released.
	
2004-05-03  Philip Blundell  <philb@gnu.org>

	* main.c (main): Disable "journal" icon temporarily.

	* Makefile: Update to use PACKAGE_CFLAGS, etc.
	(LINGUAS): Add nl, ga, ru, sr, sk, sv.

2004-04-28  Florian Boor <florian.boor@kernelconcepts.de>

	* Started implementing a display facility.

2003-10-09  Philip Blundell  <philb@gnu.org>

	* Version 0.13 released.
	
2003-10-09  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add cs.

	* familiar/control1: Add Source.

2003-07-27  Phil Blundell  <pb@nexus.co.uk>

	* Makefile (CPPFLAGS) [CVSBUILD=yes]: Add -I../libgpewidget.

	* sql.c: Make schema decl acceptable to GCC 3.3.

2003-07-06  Moray Allan  <moray@sermisy.org>

	* Makefile (install_program): Install .desktop file with .desktop
	filename extension.

2003-06-28  Philip Blundell  <philb@gnu.org>

	* main.c (main): Hook quit to delete-event signal on main window,
	not destroy.

2003-06-28  Robert Mibus  <mibus@handhelds.org>
