@@ -1,3 +1,7 @@
+2004-08-06  Florian Boor <florian.boor@kernelconcepts.de>
+	
+	* main.c: Fixed button order and dialog behaviour.
+
 2004-06-23  Philip Blundell  <philb@gnu.org>
 
 	* Version 0.17 released.
